/*
 * $Id: ChangeLog,v 1.2041 2004/01/12 19:13:29 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-12 02:14 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/vm/itemapi.c
    * correct printf format for longlong support
    * (files > 4gb were showing mod 4gb)
  * source/rtl/hbffind.c
    * slightly reworked an instance where msvc wasn't handling longlong math properly.

2004-01-12 21:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  *include/hbgwvt.h
   ! Add file ID

2004-01-11 14:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/debug.c
    ! Fixed GPF Trap in __VMPARLLIST() due to missing test on asSymbol.paramcnt (for > 255 )
    ! Fixed GPF Trap in AddToArray() due to uninitialized asString.bStatic

    /*
       I performed a golbal search in all c sources for "= HB_IT_STRING"
       and found only 1 more instance in memvars.c where .bStatic and
       .puiHolder were not initialized. I also search for .paramcnt and
       found no other instance.
    */

  * source/vm/memvars.c
    ! Fixed GPF Trap related to unitinialized asString.bStatic

2004-01-12 10:24 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
    + Handle K_CTRL_TAB

2004-01-12 09:35 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/persist.prg
   + ::LoadFromText() - fix to work with Version 1 saved data

2004-01-11 13:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include/hbgtwvt.h
    * move CINTERFACE decl for proper msvc c++ mode handling.

2004-01-11 20:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! remove unwanted ; in line 3721

  * source/compiler/genc.c
  * source/vm/extend.c
  * source/vm/arrays.c
  * source/rtl/readline.c
  * source/rtl/hbrandom.c
  * source/rtl/hbsrlraw.c
  * source/rtl/bkgtsks.c
  * source/rdd/dbf1.c