@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2041 2004/01/12 19:13:29 paultucker Exp $
+ * $Id: ChangeLog,v 1.2042 2004/01/12 19:19:14 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-12 02:29 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/rtl/hbffind.c
+    * further cast required...
 
 2004-01-12 02:14 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * source/vm/itemapi.c
